@@ -1174,14 +1174,16 @@ generate_image (const char *dir, char *prefix, FILE *out, char *mods[],
 	 sha512sum utility after compiling on Gnewsense.
       */
       const grub_uint8_t fwstart_good_hash[] = 
-	{ 0x75, 0xbf, 0xa3, 0x0e, 0x7c, 0xd1, 0x03, 0x82,
-	  0xe1, 0x34, 0x55, 0xd7, 0x09, 0x1e, 0x6c, 0xcc,
-	  0xef, 0x08, 0x61, 0xc1, 0x3c, 0xd8, 0xc7, 0x9f,
-	  0xe8, 0x2d, 0x3d, 0xb2, 0xda, 0x41, 0xd3, 0x83,
-	  0xd7, 0xb8, 0xe3, 0xd7, 0x13, 0xec, 0x9b, 0xf6,
-	  0xf6, 0xae, 0x6b, 0x32, 0x29, 0xc1, 0x69, 0x82,
-	  0xfa, 0x65, 0x2d, 0x97, 0x3e, 0x83, 0x6e, 0x6c,
-	  0xce, 0x34, 0x10, 0x59, 0x74, 0x0e, 0x96, 0x26 };
+	{ 
+	  0x9f, 0x7f, 0x79, 0x47, 0x68, 0x91, 0x61, 0xb3
+	  0x16, 0x7b, 0xf0, 0x27, 0x1c, 0xf7, 0xaf, 0x05,
+	  0x6c, 0xc1, 0x6f, 0xd2, 0xe7, 0xd1, 0xe9, 0xec,
+	  0x08, 0x87, 0xe5, 0xc8, 0x29, 0xa2, 0x5b, 0x84,
+	  0xf8, 0xa6, 0xec, 0x08, 0xf7, 0xcb, 0x7b, 0x6c,
+	  0xfe, 0x01, 0xfd, 0x5d, 0xba, 0xbf, 0x0d, 0x0f,
+	  0x2e, 0xef, 0xed, 0x7b, 0xfe, 0xc9, 0x4a, 0x85,
+	  0xcf, 0xac, 0x20, 0xd7, 0x01, 0xc5, 0xc5, 0x9c 
+	};
       
       boot_path = grub_util_get_path (dir, "fwstart.img");
       boot_size = grub_util_get_image_size (boot_path);
